--- a/cf-stacks/roles.yaml
+++ b/cf-stacks/roles.yaml
@@ -1,4 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
+# sb - test pipeline
 # Version 1.0 - Initial version
 # Version 1.1 - Add Admin role trust with master
 # Version 1.2 - Add Nexus role for cots account
