--- a/cf-stacks/backup.yaml
+++ b/cf-stacks/backup.yaml
@@ -1,6 +1,7 @@
 AWSTemplateFormatVersion: "2010-09-09"
 # Version 1.2 - Updating AWS Backup Plan from monthly to weekly (i.e. every Tuesday)
 # Version 1.3 - Fixed cron expression for scheduled AWS Backup Plan
+# sb test - pipeline
 # Version 1.4 - Updated AWS Backup Plan time to 8:00 AM (local)
 # Version 1.5 - Extract IAM roles and put them in roles.yaml template 
 Description: Template to create backups using AWS Backup and LifeCycleManager policies for RDS instances and EBS volumes. Version 1.5
