--- a/jira.yaml
+++ b/jira.yaml
@@ -97,7 +97,7 @@ Resources:
         Schedule: !If [ IsProd, 24-7, office-hours ]
 
         # ===== EC2 Section =====
-        CreateEC2: !If [ IsEC2Restore, Linux-Restore, Linux ]
+        CreateEC2: Linux
         EC2Size: t3.large
         EC2Ami: !Ref EC2Ami
         EC2RootVolumeSize: !Ref EC2RootVolumeSize
@@ -108,11 +108,10 @@ Resources:
 
   EBSAppVolume:
     Type: AWS::EC2::Volume
+    #DependsOn: EC2
     Properties:
       Size: !Ref EC2AppVolumeSize
-      AvailabilityZone:
-        Fn::ImportValue:
-          !Sub "${JIRAProjectKey}-${Environment}-ec2-az"
+      AvailabilityZone: !GetAtt EC2.Outputs.AvailabilityZone
       Encrypted: true
       Tags:
       - Key: Name
@@ -129,20 +128,18 @@ Resources:
 
   EBSAppMountPoint:
     Type: AWS::EC2::VolumeAttachment
+    #DependsOn: EC2
     Properties:
-      InstanceId:
-        Fn::ImportValue:
-          !Sub "${JIRAProjectKey}-${Environment}-ec2"
+      InstanceId: !GetAtt EC2.Outputs.InstanceId
       VolumeId: !Ref EBSAppVolume
       Device: !Ref EC2AppVolumeMount
 
   EBSDataVolume:
     Type: AWS::EC2::Volume
+    #DependsOn: EC2
     Properties:
       Size: !Ref EC2DataVolumeSize
-      AvailabilityZone:
-        Fn::ImportValue:
-          !Sub "${JIRAProjectKey}-${Environment}-ec2-az"
+      AvailabilityZone: !GetAtt EC2.Outputs.AvailabilityZone
       Encrypted: true
       Tags:
       - Key: Name
@@ -159,10 +156,9 @@ Resources:
 
   EBSDataMountPoint:
     Type: AWS::EC2::VolumeAttachment
+    #DependsOn: EC2
     Properties:
-      InstanceId:
-        Fn::ImportValue:
-          !Sub "${JIRAProjectKey}-${Environment}-ec2"
+      InstanceId: !GetAtt EC2.Outputs.InstanceId
       VolumeId: !Ref EBSDataVolume
       Device: !Ref EC2DataVolumeMount
 
