--- a/jira.yaml
+++ b/jira.yaml
@@ -105,9 +105,6 @@ Resources:
         EC2Size: t3.large
         EC2Ami: !Ref EC2Ami
         EC2RootVolumeSize: !Ref EC2RootVolumeSize
-        SecurityGroupIds:
-          - Fn::ImportValue:
-              Fn::Sub: "sg-ec2-atlassian-${Environment}"
 
   EBSAppVolume:
     Type: AWS::EC2::Volume
@@ -161,6 +158,28 @@ Resources:
       VolumeId: !Ref EBSDataVolume
       Device: !Ref EC2DataVolumeMount
 
+  # Allow incoming connection on JIRA's listening port from ALB VPC
+  IngressJIRA:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      GroupId: !GetAtt EC2.Outputs.EC2SecurityGroup
+      IpProtocol: tcp
+      FromPort: 8080
+      ToPort: 8080
+      CidrIp: 100.96.192.0/24
+
+  # Allow incoming connection on Crowd's listening port from JIRA's sg
+  IngressCrowd:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      GroupId:
+        Fn::ImportValue:
+          Fn::Sub:  "sg-ec2-crowd-${Environment}"
+      IpProtocol: tcp
+      FromPort: 8095
+      ToPort: 8095
+      SourceSecurityGroupId: !GetAtt EC2.Outputs.EC2SecurityGroup
+
   RDS:
     Type: AWS::CloudFormation::Stack
     Properties:
@@ -183,3 +202,15 @@ Resources:
         RDSSnapshot: !Ref RDSSnapshot
         RDSBackupRetentionPeriod: !If [ IsProd, 30, 7 ]
         RDSMasterUserPassword: !Ref RDSMasterUserPassword
+
+  IngressPostgres:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      Description: Allow incoming connections from EC2s from VPC to RDS on port 5432 (Postgresql)
+      GroupId: !GetAtt RDS.Outputs.RDSSecurityGroup
+      IpProtocol: tcp
+      FromPort: 5432
+      ToPort: 5432
+      CidrIp:
+        Fn::ImportValue:
+          Fn::Sub:  "vpc-cidrblock-${VPCName}-${Environment}"
