--- a/accounts/cots/confluence.yaml
+++ b/accounts/cots/confluence.yaml
@@ -101,6 +101,66 @@ Resources:
         EC2Size: t3.large
         EC2Ami: !Ref EC2Ami
         EC2RootVolumeSize: !Ref EC2RootVolumeSize
+        UserData:
+          Fn::Base64: !Sub |
+            #!/bin/bash -xe
+
+            # Create directories
+            mkdir -p /opt/atlassian/confluence /var/atlassian/application-data/confluence
+
+            # Wait until the volume shows up
+            while [ ! -e ${EBSDataVolume} ]; do echo Waiting for EBS Data volume to attach; sleep 5; done
+
+            # Create filesystem
+            mkfs -t xfs "${EBSDataMount}"
+
+            # Add an entry to fstab to mount volume during boot
+            echo "${EBSDataVolume}    /var/atlassian/application-data/confluence xfs    defaults,noatime,nofail    0    2" >> /etc/fstab
+
+            # Wait until the volume shows up
+            while [ ! -e ${EBSAppMount} ]; do echo Waiting for EBS App volume to attach; sleep 5; done
+
+            # Create filesystem
+            mkfs -t xfs "${EBSAppVolume}"
+
+            # Add an entry to fstab to mount volume during boot
+            echo "${EBSAppVolume}     /opt/atlassian/confluence                xfs    defaults,noatime,nofail    0    2" >> /etc/fstab
+
+            # Mount the volumes on current boot
+            mount -a
+
+            # Install deps
+            yum install -y fontconfig patch java-1.8.0-openjdk
+
+            # Get custom files
+            wget https://github.com/stephane-berube/cots-mods/archive/confluence.zip -O /tmp/pkg.zip
+            unzip /tmp/pkg.zip -d /tmp
+
+            # Get and run Confluence installer
+            wget "${ConfluenceInstallerUrl}" -O /tmp/installer.bin
+            chmod u+x /tmp/installer.bin
+            yes '' | /tmp/installer.bin
+
+            # Stop the running Confluence instance
+            service confluence stop
+
+            # Setup logging to be logrotate-friendly
+            cat /tmp/cots-mods-confluence/logging.properties.suffix >> /opt/atlassian/confluence/conf/logging.properties
+            mv /tmp/cots-mods-confluence/confluence.logrotate /etc/logrotate.d/confluence.conf
+
+            # Disable the old Confluence boot-time startup
+            systemctl disable confluence
+
+            # Copy our systemd unit file
+            mv /tmp/cots-mods-confluence/confluence.service /etc/systemd/system/confluence.service
+
+            # Refresh systemd daemons since we've added a new unit file
+            # start Confluence and enable startup at boot-time
+            systemctl daemon-reload
+            systemctl enable confluence --now
+
+            # Cleanup
+            rm -r /tmp/cots-mods-confluence /tmp/pkg.zip /tmp/installer.bin
 
   EBSAppVolume:
     Type: AWS::EC2::Volume
