[WIP] iam-user: Add tags
ised-contact-email is where to send notifications when key rotation is
about to happen

ised-stack-id is the ID of the cfn stack that created the user. The
lambda function needs this to update the "Serial" property in the cfn
template that created the IAM user

--- a/iam-user.yaml
+++ b/iam-user.yaml
@@ -8,6 +8,8 @@ Parameters:
   Password:
     Type: String
     NoEcho: True
+  Email:
+    Type: String
   ManagedPolicyArns:
     Description: Comma-separated list of IAM Policy ARNs
     Type: String
@@ -37,6 +39,11 @@ Resources:
               - - !ImportValue iam-policy-enforce-mfa
                 - !Ref ManagedPolicyArns
           - - !ImportValue iam-policy-enforce-mfa
+      Tags:
+        - Key: ised-contact-email
+          Value: !Ref Email
+        - Key: ised-stack-id
+          Value: !Ref "AWS::StackId"
 
   IAMAccessKey:
     Type: AWS::IAM::AccessKey
