s3-config: Change lambda runtime to python

--- a/cf-stacks/config-s3.yaml
+++ b/cf-stacks/config-s3.yaml
@@ -54,7 +54,7 @@ Resources:
       Code:
         S3Bucket: !Sub "${S3BucketNamePrefix}-${AccountIDMaster}-lambdas"
         S3Key: ised-config-s3.zip
-      Runtime: nodejs12.x
+      Runtime: python3.7
 
   # Allow the Config Rule above to trigger our Lambda
   PermitConfig:
